Fix line height for wrapped inline code blocks

--- a/slides/shared/themes/style/skew.scss
+++ b/slides/shared/themes/style/skew.scss
@@ -81,6 +81,10 @@
       }
     }
 
+    li {
+      line-height: 1.5em;
+    }
+
     .strike {
       text-decoration: line-through;
     }
